# aero-resq

./: .gitignore  README.md  pyproject.toml
ai_engine/: .gitignore  README.md  elston code  main.py  main_ernest  pyproject.toml
backend/: README.md  pyproject.toml
backend/app/: database.py  main.py  routes.py  schemas.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css  main.jsx
frontend/src/components/: AlertPanel.jsx  BandwidthBar.jsx  Header.jsx  MapArea.jsx  leafleftFix.js
src/aero_resq/: __init__.py
testbench/: testbench.md
