[project]
name = "aero-resq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "elvis", email = "elvisong2003@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "ai_engine",
    "backend",
]
